--- a/restart-folder/views/layouts/main.handlebars
+++ b/restart-folder/views/layouts/main.handlebars
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../public/assets/css/style.css" type="text/css">
-    <title>To Do List App</title>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/ad97605fad.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/assets/css/style.css" type="text/css">
     <script src="https://code.jquery.com/jquery.js"></script>
-	<script src="../../public/assets/js/toDoListApp.js"></script>
+    <title>To-Do List App</title>
 </head>
 <body>
-    <!-- {{{ body }}} -->
-    
+    {{{ body }}}
 </body>
 </html>
