added restart icon

--- a/restart-folder/views/index.handlebars
+++ b/restart-folder/views/index.handlebars
@@ -88,8 +88,8 @@
                                         eget risus varius
                                         blandit.</del></p>
                                 <span class="icon-container d-flex  justify-content-center">
-                                    <i class="btn fas fa-check-square text-success icon-med-size"></i>
-                                    <i class="btn fas fa-edit text-muted icon-med-size" type="button"
+                                        <i class="btn fas fa-undo text-success icon-med-size"></i>
+                                        <i class="btn fas fa-edit text-muted icon-med-size" type="button"
                                         data-toggle="modal" data-target="#taskModal" data-taskId=""></i>
                                     <i class="btn fas fa-trash text-danger icon-med-size"></i>
                                 </span>
