added count to root route

--- a/restart-folder/views/partials/task-block.handlebars
+++ b/restart-folder/views/partials/task-block.handlebars
@@ -1,7 +1,7 @@
 <div class="list-group-item list-group-item-action">
     <div class="d-flex w-100 justify-content-between">
         <h5 class="mb-1">{{this.task_header}}</h5>
-        <small>!!!!!!3 days ago</small>
+        <small>{{this.updatedAt}}</small>
     </div>
 
     <div class="d-sm-flex w-100 justify-content-between">
