--- a/restart-folder/views/index.handlebars
+++ b/restart-folder/views/index.handlebars
@@ -5,7 +5,7 @@
 <div class="container my-3">
     <div class="d-flex w-100 justify-content-center">
         <!-- Button trigger modal -->
-        <button type="button" class="btn my-gradient text-white mx-3" data-toggle="modal" data-target="#taskModal">
+        <button type="button" class="btn my-gradient text-white mx-3" data-toggle="modal" data-target="#taskModal" data-whatever="ADD">
             Add To-Do
         </button>
 
@@ -90,23 +90,23 @@
                     <div class="form-container">
                         <div class="form-group">
                             <label for="task_header"><strong>Task Name:</strong> </label>
-                            <input class="form-control" type="text" name="task_header">
+                            <input class="form-control task-name" type="text" name="task_header">
                         </div>
 
                         <div class="form-group">
                             <label for="task_details"><strong>Task Details:</strong></label>
-                            <textarea class="form-control" name="task_details"></textarea>
+                            <textarea class="form-control task-body" name="task_details"></textarea>
                         </div>
 
                         <div class="form-group">
                             <label for="task_status"><strong>Is this task already completed?</strong></label>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="status" id="status_no" value="0"
+                                <input class="form-check-input status-incomplete" type="radio" name="status" id="status_no" value="false"
                                     checked>
                                 <label class="form-check-label" for="status_no">No</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="status" id="status_yes" value="1">
+                                <input class="form-check-input status-complete" type="radio" name="status" id="status_yes" value="true">
                                 <label class="form-check-label" for="status_yes">Yes</label>
                             </div>
                         </div>
@@ -117,7 +117,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn my-gradient text-white" id="save">Add Task</button>
+                    <button type="button" class="btn my-gradient text-white" id="modal-act-button" data-method="ADD">Add Task</button>
                 </div>
             </div>
         </div>
@@ -126,13 +126,10 @@
 
 </div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
     crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
     crossorigin="anonymous"></script>
-<script src="assets/js/toDoListApp.js"></script>
+<script src="assets/js/toDoListApp.js" type="text/javascript"></script>
