--- a/restart-folder/views/index.handlebars
+++ b/restart-folder/views/index.handlebars
@@ -51,7 +51,7 @@
                 <h2 class="mb-0">
                     <button class="btn btn-light btn-block text-left" type="button" data-toggle="collapse"
                         data-target="#collapseF1Completed" aria-expanded="true" aria-controls="collapseF1Completed">
-                        Completed <span class="badge badge-light my-gradient text-white">{{completedCount}}</span>
+                        Completed <span class="badge badge-light bg-secondary text-white">{{completedCount}}</span>
                     </button>
                 </h2>
             </div>
