--- a/views/partials/task-block.handlebars
+++ b/views/partials/task-block.handlebars
@@ -1,7 +1,7 @@
 <div class="list-group-item list-group-item-action">
     <div class="d-flex w-100 justify-content-between">
         <h5 class="mb-1">{{#if this.status}}<del>{{this.task_header}}</del>{{else}}{{this.task_header}}{{/if}}</h5>
-        <small>Due {{this.formatedDate}}</small>
+        <small class="display-due-date" data-date="{{this.due_date}}" data-status="{{this.status}}">Due {{this.formatedDate}}</small>
     </div>
 
     <div class="d-sm-flex w-100 justify-content-between">
