--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -104,7 +104,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="task_status"><strong>Is this task already completed?</strong></label>
+                            <label for="task_status" id="status-label"><strong>Is this task already completed?</strong></label>
                             <div class="form-check form-check-inline">
                                 <input class="form-check-input status-incomplete" type="radio" name="status" id="status_no" value="false"
                                     checked>
