--- a/views/partials/task-block.handlebars
+++ b/views/partials/task-block.handlebars
@@ -1,15 +1,46 @@
+<!-- Main div for task -->
 <div class="list-group-item list-group-item-action">
+
+    <!-- Div for task header and due date-->
     <div class="d-flex w-100 justify-content-between">
-        <h5 class="mb-1">{{#if this.status}}<del>{{this.task_header}}</del>{{else}}{{this.task_header}}{{/if}}</h5>
+        <!-- Header -->
+        <h5 class="mb-1">
+            {{#if this.status}}
+                <del>{{this.task_header}}</del>
+            {{else}}
+                {{this.task_header}}
+            {{/if}}
+        </h5>
+
+        <!-- Due Date -->
         <small class="display-due-date" data-date="{{this.due_date}}" data-status="{{this.status}}">Due {{this.formatedDate}}</small>
     </div>
 
+    <!-- Div for task details and icons for buttons -->
     <div class="d-sm-flex w-100 justify-content-between">
-        <p class="mb-1">{{#if this.status}} <del>{{this.task_details}}</del> {{else}} {{this.task_details}} {{/if}}</p>
+        
+        <!-- Task Details -->
+        <p class="mb-1">
+            {{#if this.status}} 
+                <del>{{this.task_details}}</del> 
+            {{else}} 
+                {{this.task_details}} 
+            {{/if}}
+        </p>
+
+        <!-- Task Icons Span Container -->
         <span class="icon-container d-flex  justify-content-center">
-            {{#if this.status}}<i data-taskId="{{this.id}}" class="btn fas fa-undo text-success icon-med-size undo-task-btn"></i>
-            {{else}}<i data-taskId="{{this.id}}" class="btn fas fa-check-square text-success icon-med-size complete-task-btn"></i>{{/if}}
+            <!-- Complete or undo icon based on status -->
+            {{#if this.status}}
+                <i data-taskId="{{this.id}}" class="btn fas fa-undo text-success icon-med-size undo-task-btn"></i>
+            {{else}}
+                <i data-taskId="{{this.id}}" class="btn fas fa-check-square text-success icon-med-size complete-task-btn"></i>
+            {{/if}}
+
+            <!-- Edit Icon -->
             <i class="btn fas fa-edit text-muted icon-med-size edit-task-btn" type="button" data-toggle="modal" data-target="#taskModal" data-taskId="{{this.id}}" data-whatever="EDIT"></i>
+            
+            <!-- Delete Icon -->
             <i class="btn fas fa-trash text-danger icon-med-size delete-task-btn" data-taskId="{{this.id}}"></i>
         </span>
     </div>
