removed type button from edit icon

--- a/views/partials/task-block.handlebars
+++ b/views/partials/task-block.handlebars
@@ -38,7 +38,7 @@
             {{/if}}
 
             <!-- Edit Icon -->
-            <i class="btn fas fa-edit text-muted icon-med-size edit-task-btn" type="button" data-toggle="modal" data-target="#taskModal" data-taskId="{{this.id}}" data-whatever="EDIT"></i>
+            <i class="btn fas fa-edit text-muted icon-med-size edit-task-btn" data-toggle="modal" data-target="#taskModal" data-taskId="{{this.id}}" data-whatever="EDIT"></i>
             
             <!-- Delete Icon -->
             <i class="btn fas fa-trash text-danger icon-med-size delete-task-btn" data-taskId="{{this.id}}"></i>
